# daffodil

./: .gitignore  Cargo.toml
daffodil_derive/: Cargo.toml
daffodil_derive/src/: lib.rs
src/: aggregate.rs  lib.rs  orm.rs  prelude.rs  private.rs  query.rs
