[package]
name = "daffodil"
version = "0.1.0"
authors = ["desdaemon"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wither = "0.9.0-alpha.2"
wither_derive = "0.9.0-alpha.2"
serde = { version = "1.0", features = [ "derive" ] }
futures = "0.3.8"
daffodil_derive = { path = "./daffodil_derive" }
async-trait = "0.1.41"

[dev-dependencies]
actix-rt = "1.1.1"
chrono = "0.4.19"
serde_json = "1.0"
env_logger = "0.8.1"
log = "0.4.11"